--- a/workshopmongo/pom.xml
+++ b/workshopmongo/pom.xml
@@ -15,6 +15,7 @@
 	<description>Workshop Spring Boot com MongoDB</description>
 	<properties>
 		<java.version>17</java.version>
+		
 	</properties>
 	<dependencies>
 		<dependency>
@@ -26,6 +27,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 	</dependencies>
 
